--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 #promo {
-    background: #264fb4;
+    background: var(--main-blue-color);
     height: 800px;
 }
 
@@ -23,12 +23,12 @@
     font-size: 2rem;
     font-weight: normal;
     max-width: 360px;
-    color: #f0f0f0;
+    color: var(--promo-text-color);
 }
 
 .promo-description {
     font-size: 1.1rem;
-    color: #f0f0f0;
+    color: var(--promo-text-color);
 }
 
 #contacts {
@@ -39,8 +39,8 @@
 }
 
 .contacts-card {
-    border-top: 4px solid #264fb4;
-    border-bottom: 4px solid #264fb4;
+    border-top: 4px solid var(--main-blue-color);
+    border-bottom: 4px solid var(--main-blue-color);
 }
 
 footer {
